rewrite core with URI loader