@@ -1,20 +1,28 @@
 package io.avaje.config;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 final class CoreComponents {
 
   private final ModificationEventRunner runner;
   private final ConfigurationLog log;
-  private final Parsers parsers;
+  private final Map<String, ConfigParser> parsers;
+  private final Map<String, URIConfigLoader> uriLoaders;
   private final List<ConfigurationSource> sources;
   private final List<ConfigurationPlugin> plugins;
 
-  CoreComponents(ModificationEventRunner runner, ConfigurationLog log, Parsers parsers, List<ConfigurationSource> sources, List<ConfigurationPlugin> plugins) {
+  CoreComponents(
+      ModificationEventRunner runner,
+      ConfigurationLog log,
+      Map<String, ConfigParser> parsers,
+      Map<String, URIConfigLoader> uriLoaders,
+      List<ConfigurationSource> sources,
+      List<ConfigurationPlugin> plugins) {
     this.runner = runner;
     this.log = log;
     this.parsers = parsers;
+    this.uriLoaders = uriLoaders;
     this.sources = sources;
     this.plugins = plugins;
   }
@@ -23,13 +31,18 @@ final class CoreComponents {
   CoreComponents() {
     this.runner = new CoreConfiguration.ForegroundEventRunner();
     this.log = new DefaultConfigurationLog();
-    this.parsers = new Parsers(Collections.emptyList());
-    this.sources = Collections.emptyList();
-    this.plugins = Collections.emptyList();
+    this.parsers = ConfigServiceLoader.get().parsers();
+    this.uriLoaders = ConfigServiceLoader.get().uriLoaders();
+    this.sources = List.of();
+    this.plugins = List.of();
   }
 
-  Parsers parsers() {
+  Map<String, ConfigParser> parsers() {
     return parsers;
+  }
+
+  public Map<String, URIConfigLoader> uriLoaders() {
+    return uriLoaders;
   }
 
   ConfigurationLog log() {
